[package]
name = "bitcoind-watcher"
version = "0.1.1"
edition = "2021"
description = "Be notified when important things happen on the Bitcoin blockchain"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logwatcher = "0.1"
bitcoind-log-parser = "0.1.2"
